# syncer

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
noaio/: __init__.py
syncer/: core.py
tests/: test_core.py
